@@ -2,6 +2,7 @@ SimpleComplex/Filter 1.x, 2017-05-25
 ------------------------------------
 - Use ValidateByRules via Validate::challengeRules()
 - Option errUnconditionally.
+- Exceptions moved to sub namespace \Exception.
 
 SimpleComplex/Filter 1.x, 2017-05-24
 ------------------------------------
